corrextion des erreurs

--- a/CommunityMarket/app/build.gradle
+++ b/CommunityMarket/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.github.xizzhu:simple-tool-tip:0.7.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
 
 
 }
