--- a/CommunityMarket/build.gradle
+++ b/CommunityMarket/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
 
     }
     dependencies {
@@ -23,6 +24,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com'}
+        mavenCentral()
 
     }
 }
