--- a/CommunityMarket/app/build.gradle
+++ b/CommunityMarket/app/build.gradle
@@ -73,7 +73,11 @@ dependencies {
     implementation 'com.github.xizzhu:simple-tool-tip:0.7.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation  'com.twitter.sdk.android:twitter:3.1.1'
+    implementation 'com.twitter.sdk.android:twitter-mopub:3.1.1'
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
+    implementation 'com.twitter.sdk.android:tweet-ui:3.1.1'
+    implementation 'com.twitter.sdk.android:tweet-composer:3.1.1'
+    implementation 'com.twitter.sdk.android:twitter-mopub:3.1.1'
 
 
 }
