--- a/CommunityMarket/app/build.gradle
+++ b/CommunityMarket/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'com.twitter.sdk.android:tweet-composer:3.1.1'
     implementation 'com.twitter.sdk.android:twitter-mopub:3.1.1'
     implementation 'com.flipboard:bottomsheet-core:1.5.3'
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4'
 
 
 }
