--- a/CommunityMarket/build.gradle
+++ b/CommunityMarket/build.gradle
@@ -24,6 +24,9 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com'}
+        maven{
+            url 'https://raw.github.com/zeeshanejaz/unirest-android/mvn-repo'
+        }
         mavenCentral()
 
     }
