--- a/CommunityMarket/app/build.gradle
+++ b/CommunityMarket/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
     implementation 'com.twitter.sdk.android:twitter-mopub:3.1.1'
     implementation 'com.flipboard:bottomsheet-core:1.5.3'
     implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4'
+    implementation 'com.microsoft.projectoxford:vision:1.0.395'
+    implementation 'com.mashape.unirest:unirest-android:1.0+'
+    implementation 'com.android.volley:volley:1.1.1'
 }
