--- a/CommunityMarket/app/build.gradle
+++ b/CommunityMarket/app/build.gradle
@@ -53,10 +53,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-    implementation 'com.google.firebase:firebase-firestore:18.0.1'
-    implementation 'com.google.firebase:firebase-storage:16.0.5'
+
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'id.zelory:compressor:2.1.0'
@@ -83,4 +83,6 @@ dependencies {
     implementation 'com.microsoft.projectoxford:vision:1.0.395'
     implementation 'com.mashape.unirest:unirest-android:1.0+'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
+
 }
