--- a/CommunityMarket/app/build.gradle
+++ b/CommunityMarket/app/build.gradle
@@ -55,18 +55,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.mikhaellopez:circularimageview:3.0.2'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-    implementation 'com.xwray:groupie:2.1.0'
     implementation 'com.google.firebase:firebase-messaging:17.4.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
@@ -84,5 +79,6 @@ dependencies {
     implementation 'com.mashape.unirest:unirest-android:1.0+'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
+    implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
 
 }
