--- a/CommunityMarket/app/src/main/AndroidManifest.xml
+++ b/CommunityMarket/app/src/main/AndroidManifest.xml
@@ -140,7 +140,8 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".search.ChoiceSearchActivity"></activity>
+        <activity android:name=".search.ChoiceSearchActivity" />
+        <activity android:name=".profile.FavoriesActivity"></activity>
     </application>
 
 </manifest>
