--- a/CommunityMarket/app/build.gradle
+++ b/CommunityMarket/app/build.gradle
@@ -5,8 +5,9 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "cm.studio.devbee.communitymarket"
-        minSdkVersion 21
+        minSdkVersion 17
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -65,14 +66,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.android.gms:play-services-ads:17.2.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
-    implementation 'com.github.xizzhu:simple-tool-tip:0.7.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
-    implementation 'com.twitter.sdk.android:twitter:3.1.1'
-    implementation 'com.twitter.sdk.android:twitter-mopub:3.1.1'
-    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
-    implementation 'com.twitter.sdk.android:tweet-ui:3.1.1'
-    implementation 'com.twitter.sdk.android:tweet-composer:3.1.1'
-    implementation 'com.twitter.sdk.android:twitter-mopub:3.1.1'
     implementation 'com.flipboard:bottomsheet-core:1.5.3'
     implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4'
     implementation 'com.microsoft.projectoxford:vision:1.0.395'
@@ -80,5 +74,5 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
     implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
-
+    implementation 'com.android.support:multidex:1.0.3'
 }
