--- a/CommunityMarket/app/src/main/AndroidManifest.xml
+++ b/CommunityMarket/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="android.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permission.SET_ALARM" />
+
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
@@ -143,8 +144,11 @@
         <activity android:name=".search.ChoiceSearchActivity" />
         <activity android:name=".profile.FavoriesActivity" />
         <activity android:name=".search.Search_User_Activity" />
-        <activity android:name=".profile.NotificationActivity"></activity>
-        <receiver android:name=".notification_receiver"/>
+        <activity android:name=".profile.NotificationActivity" />
+
+        <receiver android:name=".notification_receiver" />
+
+        <activity android:name=".NoConnecTionActivity"></activity>
     </application>
 
 </manifest>
